Bug 970550: Fix build on OpenBSD (no TCP_KEEP* setsockopt() available) after bug 444328 r=sworkman